--- a/components/Empty/Empty.scss
+++ b/components/Empty/Empty.scss
@@ -1,17 +1,15 @@
-/**
- * React Static Boilerplate
- * https://github.com/koistya/react-static-boilerplate
- * Copyright (c) Konstantin Tarkus (@koistya) | MIT license
- */
+.empty {
+  html, body {
+    height: 100%;
+    overflow-y: hidden;
+  }
 
-@import '../variables.scss';
-
-html, body {
-  margin: 0;
-  padding: 0;
-  background-color: $body-bg;
-  color: $text-color;
-  font-family: $font-family-base;
+  body {
+    background: $backgroundWhite;
+    margin: 0;
+    padding: 30px;
+    -webkit-text-size-adjust: 100%;
+  }
 
   .logoType {
     color: #CFDBDC;
@@ -159,7 +157,7 @@ html, body {
   }
 
   .crate-holder {
-    width: 80px;
+  	width: 80px;
     height: 100%;
   }
 
@@ -186,27 +184,5 @@ html, body {
     max-height: 400px;
     // margin-bottom: -1px;
     // margin-top: -1px;
-  }
-}
-
-.Layout {
-  margin: 0 auto;
-}
-
-@media (min-width: $screen-sm-min) {
-  .Layout {
-    width: calc($screen-sm-min - 18px);
-  }
-}
-
-@media (min-width: $screen-md-min) {
-  .Layout {
-    width: calc($screen-md-min - 22px);
-  }
-}
-
-@media (min-width: $screen-lg-min) {
-  .Layout {
-    width: calc($screen-lg-min - 30px);
   }
 }
