--- a/components/variables.scss
+++ b/components/variables.scss
@@ -8,15 +8,15 @@
  * Scaffolding
  * -------------------------------------------------------------------------- */
 
-$body-bg: #f7f7f7;
+$body-bg: #FEFDFA;
 $text-color: #333;
-$brand-color: #21ce99;
+$brand-color: #cfdbdc;
 
 /*
  * Typography
  * -------------------------------------------------------------------------- */
 
-$font-family-base: 'Roboto', 'Helvetica', sans-serif;
+$font-family-base: 'Varela', 'Helvetica', sans-serif;
 
 /*
  * Media queries breakpoints
